<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ucast.taxisharing.activity.RegistFirstActivity">





    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            >

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/regist_email"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/HintAppearance"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    >
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:maxLines="1"
                        android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/regist_firstname"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/HintAppearance"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    >
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fistname"
                        android:maxLines="1"
                        android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/regist_lastname"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/HintAppearance"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    >
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/latname"
                        android:maxLines="1"
                        android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/regist_nickname"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/HintAppearance"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    >
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nickname"
                        android:maxLines="1"
                        android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/regist_password"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/HintAppearance"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    >
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:maxLines="1"
                        android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/regist_reiuput_password"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/HintAppearance"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    >
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_password_again"
                        android:maxLines="1"
                        android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/regist_idcard"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/HintAppearance"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    >
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/idcard"
                        android:maxLines="1"
                        android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/regist_idcard_again"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/HintAppearance"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    >
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/idcard_again"
                        android:maxLines="1"
                        android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/sex"
                    android:textColor="@android:color/darker_gray"
                    />

                <RadioGroup
                    android:id="@+id/regist_sex"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/regist_man"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/man"
                        android:textColor="@android:color/darker_gray"
                        />
                    <RadioButton
                        android:id="@+id/regist_woman"
                        android:layout_marginLeft="28dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/woman"
                        android:textColor="@android:color/darker_gray"
                        />
                </RadioGroup>

            </LinearLayout>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/regist_next"
                style="@style/FullScrennButton"
                android:layout_marginTop="16dp"
                android:text="@string/sign_in"
                android:textStyle="bold"/>



        </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

</LinearLayout>
