<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ucast.taxisharing.activity.ForgetPasswordActivity">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            >

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/forget_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/forget_password_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/forget_password_phone_number"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/HintAppearance"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    >


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_phone_number"
                        android:maxLines="1"
                        android:singleLine="true"/>





                </android.support.design.widget.TextInputLayout>
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/forget_password_get_verify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/get_verify"
                    android:layout_gravity="center_vertical"
                    android:backgroundTint="@android:color/holo_orange_light"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/forget_password_verify"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/HintAppearance"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    >


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_verify"
                        android:maxLines="1"
                        android:singleLine="true"/>





                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/forget_password_next"
                style="@style/FullScrennButton"
                android:layout_marginTop="16dp"
                android:text="@string/next"
                android:textStyle="bold"/>





        </LinearLayout>
    </ScrollView>



</LinearLayout>
