<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ucast.taxisharing.activity.LoginActivity">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            >

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>




    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                >
                <ImageView
                    android:id="@+id/login_logo"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:src="@mipmap/taxi"
                    />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/HintAppearance"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"

                >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:text="344213807@qq.com"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_password"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/HintAppearance"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                >


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:text="1234"
                        android:maxLines="1"
                        android:singleLine="true"/>





            </android.support.design.widget.TextInputLayout>
                <ImageButton
                    android:id="@+id/login_password_see"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/see_close"
                    android:backgroundTint="#ffffff"
                    android:layout_gravity="center"
                    />
            </LinearLayout>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/login_email_sign_in_button"
                style="@style/FullScrennButton"
                android:layout_marginTop="16dp"
                android:text="@string/login"
                android:textStyle="bold"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                >
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/login_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:text="@string/forget_password"
                    android:textSize="12sp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"/>
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/login_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:text="@string/sign_in"
                    android:textSize="12sp"
                    />
            </LinearLayout>



        </LinearLayout>
    </ScrollView>









</LinearLayout>
